new mobile cover + minor updates

--- a/index.html
+++ b/index.html
@@ -339,27 +339,30 @@
    <div class="mobile">
       <!-- Landing Page -->
       <header class = "section-1 welcome-text" id="welcome">
-         <h1>Suraj Bansal</h1>
-         <h3 class = "text-emphasis">I'M A
-            <span
+         <div class="mobile-header-image center-text">
+            <img src="./assets/images/mobile logo.png" style="width: 340px; height: auto;">
+         </div>
+         <h3 class = "text-emphasis center-text descriptor">Learning, unlearning, and relearning.</h3>
+            <!-- <span
                class="txt-rotate"
                data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR ENTHUSIAST"]'></span>
-         </h3>
-         <ul class="socials fa-ul">
-            <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "bounce"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
+               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR ENTHUSIAST"]'>
+            </span> -->
+         <ul class="socials center-text fa-ul">
             <li class="individual-social"><a href="https://github.com/Suraj-Bansal" target="_blank" class = "bounce"><i class="fa-li fa fab fa-github fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://twitter.com/SurajBansal2003" target="_blank" class = "bounce"><i class="fa-li fa fab fa-twitter fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank" class = "bounce"><i class="fa-li fa fab fa-linkedin fa-2x"></i></a></li>
-            <li class="individual-social"><a href="https://medium.com/@bansalsuraj03" target="_blank" class = "bounce"><i class="fa-li fa fab fa-medium fa-2x"></i></a></li>
          </ul>
          <div class="nav">
-            <ul class="nav-links">
-               <li><a href="#experience-mobile"><span>Experience —</span></a></li>
-               <li><a href="#software-projects-mobile"><span>Projects —</span></a></li>
-               <li><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume —</span></a></li>
+            <ul class="nav-links center-text">
+               <li><a href="#experience-mobile"><span>Experience</span></a></li>
+               <li><a href="#software-projects-mobile"><span>Projects</span></a></li>
+               <li><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
             </ul>         
          </div>
+         <!-- <div class="sticky-image-wrapper center-text">
+            <img src="./assets/images/tester.png" class = "mobile-landing-pic" style="height: 300px; width: auto;">
+         </div> -->
       </header>
       <!-- About Suraj -->
       <section class="section section-2" id = "about">
@@ -391,7 +394,7 @@
             <div class="swiper-wrapper">
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Student Researcher</h5>
+                     <h5>Research Intern</h5>
                      <h6>Princess Margaret Cancer Centre, UHN</h6>
                   </div>
                   <div class="experience-logo">
@@ -400,7 +403,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Research Intern</h5>
+                     <h5>Student Researcher</h5>
                      <h6>Princess Margaret Cancer Centre, UHN</h6>
                   </div>
                   <div class="experience-logo">
@@ -534,7 +537,7 @@
                   <div class="project-row">
                      <span class="dot-python"></span>
                      <p>Python</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -543,7 +546,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade-mobile">
@@ -552,7 +555,7 @@
                   <div class="project-row">
                      <span class="dot-python"></span>
                      <p>Python</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade-mobile">
@@ -561,7 +564,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <!-- <div class="project small-bounce fade-mobile">
@@ -570,7 +573,7 @@
                   <div class="project-row">
                      <span class="dot-html"></span>
                      <p>HTML</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.loom.com/share/317594cf7a3140738a28239bd782c288" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.loom.com/share/317594cf7a3140738a28239bd782c288" target = "_blank">Learn More!</a></h6>
                   </div>
                </div> -->
             </div>
