--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Prime Minister</h5>
-                     <h6>York Region Presidents' Council</h6>
+                     <h6>The York Region District School Board Presidents' Council</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
