--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                </div>
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
-                     <h5>Co-Founder</h5>
+                     <h5>Project Lead</h5>
                      <h6>Ryde AI</h6>
                   </div>
                   <div class="experience-logo">
@@ -413,7 +413,7 @@
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Prime Minister</h5>
-                     <h6>The York Region District School Board Presidents' Council</h6>
+                     <h6>The York Region Presidents' Council</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
@@ -421,7 +421,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Co-Founder</h5>
+                     <h5>Project Lead</h5>
                      <h6>Ryde AI</h6>
                   </div>
                   <div class="experience-logo">
