--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
    <title>Suraj Bansal</title>
 </head>
 <body>
+   <!-- Preloader -->
+   <div id="preloader" class="preloader">
+      <div class="spinner-grow text-dark" role="status">
+         <span class="sr-only">Loading...</span>
+      </div>
+   </div>
    <div class="desktop">
       <!-- Navbar -->
       <nav id = "navbar">
@@ -87,7 +93,7 @@
          </div>
          <div class="swiper-container">
             <div class="swiper-wrapper">
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Student Researcher</h5>
                      <h6>Princess Margaret Cancer Centre, UHN</h6>
@@ -96,7 +102,7 @@
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Research Intern</h5>
                      <h6>Princess Margaret Cancer Centre, UHN</h6>
@@ -105,7 +111,7 @@
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Prime Minister</h5>
                      <h6>York Region Presidents' Council</h6>
@@ -114,7 +120,7 @@
                      <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Project Lead</h5>
                      <h6>Ryde AI</h6>
@@ -123,7 +129,7 @@
                      <img src="assets/images/logos/ryde.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Project Consultant</h5>
                      <h6>Sidewalk Labs</h6>
@@ -132,7 +138,7 @@
                      <img src="assets/images/logos/sidewalklabs.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Project Consultant</h5>
                      <h6>Kidogo Co.</h6>
@@ -141,7 +147,7 @@
                      <img src="assets/images/logos/kidogo.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Summer Intern</h5>
                      <h6>Baylor Scott and White Health</h6>
@@ -150,7 +156,7 @@
                      <img src="assets/images/logos/bswhealth.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Keenan Research Summer Student</h5>
                      <h6>St. Michaels Research Centre</h6>
@@ -159,7 +165,7 @@
                      <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Software Developer</h5>
                      <h6>Synbiolic</h6>
@@ -168,7 +174,7 @@
                      <img src="assets/images/logos/synbiolic.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Youth Co-Chair</h5>
                      <h6>TEDxYouth Toronto</h6>
@@ -177,7 +183,7 @@
                      <img src="assets/images/logos/tedx.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Website Developer</h5>
                      <h6>Frontline Connect Canada</h6>
@@ -186,7 +192,7 @@
                      <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <!-- <div class="swiper-slide shadow px-bounce fade">
+               <!-- <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Innovator</h5>
                      <h6>The Knowledge Society</h6>
@@ -195,7 +201,7 @@
                      <img src="assets/images/logos/tks.png" style = "width:65px;height65px">
                   </div>
                </div> -->
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Director of Logistics</h5>
                      <h6>Richmond Hill Mayor's Youth Action Committee</h6>
@@ -204,7 +210,7 @@
                      <img src="assets/images/logos/yac.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <div class="swiper-slide shadow px-bounce fade">
+               <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Teaching Assistant</h5>
                      <h6>Karnataka Centre for Developmental Disabilities</h6>
