--- a/index.html
+++ b/index.html
@@ -46,24 +46,37 @@
       <!-- Landing Page -->
       <header class = "section-1 welcome-text" id="welcome">
          <h1 class = "fade">Suraj Bansal</h1>
-         <h3 class = "text-emphasis fade">I'M A
+         <!-- <h3 class = "text-emphasis fade">I'M A
             <span
                class="txt-rotate fade"
                data-period="2000"
                data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR ENTHUSIAST"]'></span>
-         </h3>
-         <ul class="socials fa-ul">
+         </h3> -->
+         <div class="fixed">
+            <div class="content">
+               <div class="content__container">
+                 <ul class="content__container__list">
+                   <li class="content__container__list__item">STUDENT RESEARCHER</li>
+                   <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
+                   <li class="content__container__list__item">COFFEE AFICIONADO</li>
+                   <li class="content__container__list__item">GUITAR ENTHUSIAST</li>
+                 </ul>
+               </div>
+             </div>
+         </div>
+         <!-- <ul class="socials fa-ul">
             <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "fade"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://github.com/Suraj-Bansal" target="_blank" class = "fade"><i class="fa-li fa fab fa-github fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://twitter.com/SurajBansal2003" target="_blank" class = "fade"><i class="fa-li fa fab fa-twitter fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank" class = "fade"><i class="fa-li fa fab fa-linkedin fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://medium.com/@bansalsuraj03" target="_blank" class = "fade"><i class="fa-li fa fab fa-medium fa-2x"></i></a></li>
-         </ul>
+         </ul> -->
+         
          <div class="nav">
             <ul class="nav-links">
-               <li class = "fade"><a href="#software-projects"><span>Portfolio —</span></a></li>
-               <li class = "fade"><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume —</span></a></li>
-               <li class = "fade"><a href="#contact"><span>Contact Me —</span></a></li>
+               <li class = "fade"><a href="#software-projects"><span>Portfolio</span></a></li>
+               <li class = "fade"><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
+               <li class = "fade"><a href="#contact"><span>Contact Me</span></a></li>
             </ul>         
          </div>
       </header>
@@ -74,12 +87,12 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, bioinformatics, and global health. I'm currently researching AML hierarchies at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, contributing to <a class="text-emphasis p-bold p-spaced-underline" href = "https://crescent.cloud/">CReSCENT</a>, and scaling mental health projects for 130,000+ students as <a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate Prime Minister</a>. </p> 
-                  <p class = "fade">I also love cuisine, guitar, sunrise cardio, and brewing coffee! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm an incoming freshman at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a> interested in pharmacogenomics, bioinformatics, and global health. I'm currently researching heterogeneity in Acute Myeloid Leukemia at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as <a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate Prime Minister</a>, and building CovBot, an AI-powered chatbot to control COVID-19 misinformation in low-income counties. </p> 
+                  <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
                </div>
                
                <div class = "about-image fade">
-                  <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj.jpg" style = "width:280px;height:280px">
                </div>
             </div>
          </div>
@@ -88,7 +101,7 @@
       <section class="section section-1" id="experience">
          <div class="container">
             <div class="section-head center-text uppercase">
-               <h2 class = "fade">Work Experience</h2>
+               <h2><span class = "title-underline1">Work Experience</span></h2>
             </div>
          </div>
          <div class="swiper-container">
@@ -104,11 +117,11 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Research Intern</h5>
-                     <h6>Princess Margaret Cancer Centre, UHN</h6>
+                     <h5>Summer Student</h5>
+                     <h6>Medical Biophysics at University of Toronto</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow fade">
@@ -122,7 +135,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Project Lead</h5>
+                     <h5>Project Developer</h5>
                      <h6>Ryde AI</h6>
                   </div>
                   <div class="experience-logo">
@@ -149,7 +162,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Summer Intern</h5>
+                     <h5>Summer Shadow</h5>
                      <h6>Baylor Scott and White Health</h6>
                   </div>
                   <div class="experience-logo">
@@ -158,14 +171,14 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Keenan Research Summer Student</h5>
+                     <h5>Summer Student</h5>
                      <h6>St. Michaels Research Centre</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
                   </div>
                </div>
-               <div class="swiper-slide shadow fade">
+               <!-- <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Software Developer</h5>
                      <h6>Synbiolic</h6>
@@ -173,10 +186,10 @@
                   <div class="experience-logo">
                      <img src="assets/images/logos/synbiolic.png" style = "width:65px;height65px">
                   </div>
-               </div>
+               </div> -->
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Youth Co-Chair</h5>
+                     <h5>Student Co-Chair</h5>
                      <h6>TEDxYouth Toronto</h6>
                   </div>
                   <div class="experience-logo">
@@ -226,14 +239,14 @@
             <div class="swiper-button-prev fade"></div>
          </div>
          <div class="container center-text high-emphasis-text italicize cta fade">
-            <h6>Interested in working together? Lets make it happen — here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
+            <h6>Interested in working together? Here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
          </div>
       </section>
       <!-- Software Projects -->
       <section class="section section-2" id="software-projects">
          <div class="container">
             <div class="section-head center-text uppercase fade">
-               <h2>Software Projects</h2>
+               <h2><span class = "title-underline2">Software Projects</span></h2>
             </div>
             <div class="project-grid">
                <div class="project small-bounce fade">
@@ -288,7 +301,7 @@
       <section class="section section-1" id="consulting-work">
          <div class="container">
             <div class="section-head center-text uppercase fade">
-               <h2>Consulting Projects</h2>
+               <h2><span class = "title-underline1">Consulting Projects</span></h2>
             </div>
             <div class="consulting-grid">
                <div class="deck-cover center-text fade">
@@ -308,12 +321,12 @@
       </section>
       <!-- Footer Section -->
       <section class="footer section-2" id="contact">
-         <div class="container fade">
+         <div class="container">
             <div class = "center-text"><img src="assets/images/logo.png" style = "height:40px;width:auto"></div>
             <div class="footer-links center-text">
                <ul>
                   <li>
-                     <a href="malito:bansalsuraj03@gmail.com" target="_blank">Email</a>
+                     <a href="malito:bansalsuraj03@gmail.com">Email</a>
                   </li>
                   <li>
                      <p>|</p>
@@ -342,18 +355,28 @@
          </div>
       </section>
    </div>
+
+
+
    <div class="mobile">
       <!-- Landing Page -->
       <header class = "section-1 welcome-text" id="welcome">
          <div class="mobile-header-image center-text">
             <img src="./assets/images/mobile logo.png" style="width: 340px; height: auto;">
          </div>
-         <h3 class = "text-emphasis center-text descriptor">Learning, unlearning, and relearning.</h3>
-            <!-- <span
-               class="txt-rotate"
-               data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR ENTHUSIAST"]'>
-            </span> -->
+         <div class="fixed">
+            <div class="content">
+               <div class="content__container">
+                 <ul class="content__container__list">
+                   <li class="content__container__list__item">STUDENT RESEARCHER</li>
+                   <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
+                   <li class="content__container__list__item">COFFEE AFICIONADO</li>
+                   <li class="content__container__list__item">GUITAR ENTHUSIAST</li>
+                 </ul>
+               </div>
+             </div>
+         </div>
+         <!-- <h3 class = "text-emphasis center-text descriptor">Learning, unlearning, and relearning.</h3> -->
          <ul class="socials center-text fa-ul">
             <li class="individual-social"><a href="https://github.com/Suraj-Bansal" target="_blank" class = "bounce"><i class="fa-li fa fab fa-github fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://twitter.com/SurajBansal2003" target="_blank" class = "bounce"><i class="fa-li fa fab fa-twitter fa-2x"></i></a></li>
@@ -361,9 +384,9 @@
          </ul>
          <div class="nav">
             <ul class="nav-links center-text">
+               <li><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
                <li><a href="#experience-mobile"><span>Experience</span></a></li>
                <li><a href="#software-projects-mobile"><span>Projects</span></a></li>
-               <li><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
             </ul>         
          </div>
          <!-- <div class="sticky-image-wrapper center-text">
@@ -377,11 +400,11 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, bioinformatics, and global health. I'm currently researching AML hierarchies at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, contributing to <a class="text-emphasis p-bold p-spaced-underline" href = "https://crescent.cloud/">CReSCENT</a>, and scaling mental health projects for 130,000+ students as Prime Minister of<a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate</a>. </p> 
-                  <p class = "fade">I also love cuisine, guitar, sunrise cardio, and brewing coffee! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm an incoming freshman at McMaster University interested in bioinformatics, pharmacogenomics, and global health. I'm currently researching heterogeneity in Acute Myeloid Leukemia at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as Prime Minister of<a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate</a>, and building CovBot, an AI chatbot to control COVID-19 misinformation in low-income counties. </p> 
+                  <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
-                  <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
                </div>
             </div>
          </div>
@@ -409,11 +432,11 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Student Researcher</h5>
-                     <h6>Princess Margaret Cancer Centre, UHN</h6>
+                     <h5>Summer Student</h5>
+                     <h6>Medical Biophysics Department, Univeristy of Toronto</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow fade">
@@ -427,7 +450,7 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Project Lead</h5>
+                     <h5>Project Developer</h5>
                      <h6>Ryde AI</h6>
                   </div>
                   <div class="experience-logo">
@@ -463,14 +486,14 @@
                </div>
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Keenan Research Summer Student</h5>
+                     <h5>Summer Student</h5>
                      <h6>St. Michaels Research Centre</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
                   </div>
                </div>
-               <div class="swiper-slide shadow fade">
+               <!-- <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Software Developer</h5>
                      <h6>Synbiolic</h6>
@@ -478,10 +501,10 @@
                   <div class="experience-logo">
                      <img src="assets/images/logos/synbiolic.png" style = "width:65px;height65px">
                   </div>
-               </div>
+               </div> -->
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
-                     <h5>Youth Co-Chair</h5>
+                     <h5>Student Co-Chair</h5>
                      <h6>TEDxYouth Toronto</h6>
                   </div>
                   <div class="experience-logo">
