--- a/index.html
+++ b/index.html
@@ -365,16 +365,18 @@
             <img src="./assets/images/mobile logo.png" style="width: 340px; height: auto;">
          </div>
          <div class="fixed">
-            <div class="content">
-               <div class="content__container">
-                 <ul class="content__container__list">
-                   <li class="content__container__list__item">STUDENT RESEARCHER</li>
-                   <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
-                   <li class="content__container__list__item">COFFEE AFICIONADO</li>
-                   <li class="content__container__list__item">GUITAR ENTHUSIAST</li>
-                 </ul>
+            <div class="padding">
+               <div class="content">
+                  <div class="content__container">
+                     <ul class="content__container__list">
+                        <li class="content__container__list__item">STUDENT RESEARCHER</li>
+                        <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
+                        <li class="content__container__list__item">COFFEE AFICIONADO</li>
+                        <li class="content__container__list__item">GUITAR ENTHUSIAST</li>
+                     </ul>
+                  </div>
                </div>
-             </div>
+            </div>
          </div>
          <!-- <h3 class = "text-emphasis center-text descriptor">Learning, unlearning, and relearning.</h3> -->
          <ul class="socials center-text fa-ul">
