--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
-                  <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj" style = "width:250px;height:250px">
                </div>
             </div>
          </div>
