--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
-                  <img src="assets/images/suraj" style = "width:250px;height:250px">
+                  <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
                </div>
             </div>
          </div>
@@ -520,15 +520,6 @@
                      <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
                   </div>
                </div>
-               <!-- <div class="swiper-slide shadow fade">
-                  <div class = "experience-title">
-                     <h5>Innovator</h5>
-                     <h6>The Knowledge Society</h6>
-                  </div>
-                  <div class="experience-logo">
-                     <img src="assets/images/logos/tks.png" style = "width:65px;height65px">
-                  </div>
-               </div> -->
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Director of Logistics</h5>
