--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              </div>
          </div>
          <!-- <ul class="socials fa-ul">
-            <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "fade"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
+            <li class="individual-social"><a href="malito:bansas14@mcmaster.ca" target="_blank" class = "fade"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://github.com/Suraj-Bansal" target="_blank" class = "fade"><i class="fa-li fa fab fa-github fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://twitter.com/SurajBansal2003" target="_blank" class = "fade"><i class="fa-li fa fab fa-twitter fa-2x"></i></a></li>
             <li class="individual-social"><a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank" class = "fade"><i class="fa-li fa fab fa-linkedin fa-2x"></i></a></li>
@@ -326,7 +326,7 @@
             <div class="footer-links center-text">
                <ul>
                   <li>
-                     <a href="malito:bansalsuraj03@gmail.com">Email</a>
+                     <a href="malito:bansas14@mcmaster.ca">Email</a>
                   </li>
                   <li>
                      <p>|</p>
@@ -628,7 +628,7 @@
             <div class="footer-links center-text">
                <ul>
                   <li>
-                     <a href="malito:bansalsuraj03@gmail.com" target="_blank">Email</a>
+                     <a href="malito:bansas14@mcmaster.ca" target="_blank">Email</a>
                   </li>
                   <li>
                      <p>|</p>
